--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -1,3 +1,4 @@
 @import 'reset';
 @import 'variables';
 @import 'global';
+@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&display=swap');
