--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -12,4 +12,5 @@
   --base-form-bg: #{$base-form-bg};
   --base-dark-line: #{$base-dark-line};
   --text-light: #{$text-light};
+  --base: #{$base};
 }
