Added TotalCards in Dashboard page

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -13,4 +13,6 @@
   --base-dark-line: #{$base-dark-line};
   --text-light: #{$text-light};
   --base: #{$base};
+  --green: #{$green};
+  --red: #{$red};
 }
