--- a/src/assets/_app-colors.scss
+++ b/src/assets/_app-colors.scss
@@ -9,3 +9,5 @@ $primary-color: #EA7C69;
 $text-lighter: #E0E6E9;
 $base-dark-line: #393C49;
 $text-light: #ABBBC2;
+$green: #50D1AA;
+$red: #FF6471;
