Added setings page

--- a/src/assets/_app-colors.scss
+++ b/src/assets/_app-colors.scss
@@ -10,4 +10,5 @@ $text-lighter: #E0E6E9;
 $base-dark-line: #393C49;
 $text-light: #ABBBC2;
 $green: #50D1AA;
-$red: #FF6471;
+$red: #ff6471;
+$purple: #9290FE;
